apps/edge-services/changedetection/manifests/changedetection-external-auth.securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: changedetection-external-auth
  namespace: edge-services
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: changedetection-external
  oidc:
    provider:
      issuer: https://id.edgard.org
    clientID: envoy-gateway
    clientSecret:
      name: envoy-gateway-oidc-client
    redirectURL: https://changedetection.edgard.org/oauth2/callback
    logoutPath: /oauth2/logout
    cookieDomain: edgard.org
    scopes:
      - openid
      - profile
      - email
