apps/edge-services/changedetection/manifests/changedetection-external.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection-external
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/enabled: "true"
    hajimari.edgard.org/icon: bell-ring
spec:
  parentRefs:
    - name: envoy-gateway-external
      namespace: platform-system
      sectionName: https
  hostnames:
    - changedetection.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: changedetection
          port: 5000
