apps/edge-services/changedetection/manifests/changedetection-internal.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: changedetection-internal
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: envoy-gateway-internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - changedetection.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: changedetection
          port: 5000
